Improve mathjax on mobile, fix anchors on mobile

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -134,7 +134,7 @@
 
   .anchor-heading {
     position: absolute;
-    right: -$sp-4;
+    right: $sp-2;
     width: $sp-5;
     height: 100%;
     padding-right: $sp-1;
